--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 
+server.port=8761
+
+# satt till false eftersom allt körs lokalt
+eureka.client.fetch-registry=false
+eureka.client.register-with-eureka=false
