updated to java 17

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,9 @@
 server.port=8761
 
 # satt till false eftersom allt körs lokalt
-eureka.client.fetch-registry=false
 eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
+
+eureka.server.enable-self-preservation=false
+
+eureka.instance.hostname=localhost
