--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	<description>M4EurekaServiceRegistry</description>
 	<properties>
 		<java.version>17</java.version>
-	<!--	<spring-cloud.version>2021.0.7</spring-cloud.version> -->
+		<spring-cloud.version>2022.0.4</spring-cloud.version>
 	</properties>
 	<dependencies>
 		<!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-netflix-eureka-server -->
@@ -32,7 +32,7 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-<!--
+
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -44,7 +44,7 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
--->
+
 	<build>
 		<plugins>
 			<plugin>
